# witty

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: lib.rs
plugins/container-runtime/marathon/: Cargo.toml
plugins/container-runtime/marathon/src/: lib.rs
plugins/enrichment/gitflow/: Cargo.toml
plugins/enrichment/gitflow/src/: lib.rs
plugins/enrichment/jira/: Cargo.toml
plugins/enrichment/jira/src/: lib.rs
registry/: Cargo.toml
registry/src/: main.rs
runner/: Cargo.toml
runner/src/: context.rs  main.rs  reqwest.rs  reqwest_http.rs
wit/: cache.wit  commits.wit  config.wit  error.wit  git.wit  http.wit  log.wit  plugin-container-runtime.wit  plugin-enricher.wit
wits/: git.wit
