[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.3.0"
wit-component = "0.7.1"
wasmtime = { version = "6.0.0", features = ["component-model"] }
anyhow = "1.0.69"