[package]
name = "diffmrs-plugin-enrichment-jira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.4.0"
regex = "1"
serde = "1.0.152"
serde-json-wasm = "0.5.0"